# databricks-bundle-decorators

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  agents.md  coverage.xml  mkdocs.yml  pyproject.toml  todo.md  zensical.toml
.github/: pull_request_template.md
.github/workflows/: CI.yaml  docs.yml  publish.yaml  release.yaml
docs/: docker-deployment.md  getting-started.md  how-it-works.md  index.md
docs/api/: decorators.md  index.md  io-manager.md  io-managers.md  parameters.md  sdk-types.md  task-values.md
docs/api/io-managers/: index.md  polars.md  spark-classic.md  spark-serverless.md  spark-uc.md
docs/internals/: codegen.md  discovery.md  index.md  registry.md  runtime.md
examples/: databricks.yaml  example_pipeline.py
examples/resources/: __init__.py
src/databricks_bundle_decorators/: __init__.py  cli.py  codegen.py  context.py  decorators.py  discovery.py  io_manager.py  registry.py  runtime.py  sdk_types.py  task_values.py
src/databricks_bundle_decorators/io_managers/: __init__.py  polars_csv.py  polars_delta.py  polars_json.py  polars_parquet.py  spark_delta.py  spark_parquet.py  spark_uc.py
tests/: test_cli.py  test_codegen.py  test_context.py  test_decorators.py  test_polars_csv.py  test_polars_delta.py  test_polars_json.py  test_polars_parquet.py  test_runtime.py  test_spark_delta.py  test_spark_parquet.py  test_spark_uc.py  test_task_values.py
